# codegen

./: .clang-tidy  CMakeLists.txt
.github/workflows/: build.yml  code_style.yml  static_analysis.yml
example/: CMakeLists.txt  main.cc
include/codegen/codegen/: Context.hh  CopyInserter.hh  Register.hh  RegisterAllocator.hh
include/codegen/graph/: DepthFirstSearch.hh  DominanceComputer.hh  DominatorTree.hh  DotGraph.hh  Graph.hh
include/codegen/ir/: Argument.hh  BasicBlock.hh  Constant.hh  Function.hh  InstVisitor.hh  Instruction.hh  Instructions.hh  StackSlot.hh  Unit.hh  Value.hh
include/codegen/support/: List.hh  ListNode.hh  Queue.hh  Stack.hh
include/codegen/x86/: Backend.hh  Builder.hh  MachineInst.hh  Register.hh
include/coel/codegen/: Context.hh  CopyInserter.hh  Register.hh  RegisterAllocator.hh
include/coel/graph/: DepthFirstSearch.hh  DominanceComputer.hh  DominatorTree.hh  DotGraph.hh  Graph.hh
include/coel/ir/: Argument.hh  BasicBlock.hh  Constant.hh  Dumper.hh  Function.hh  InstVisitor.hh  Instruction.hh  Instructions.hh  StackSlot.hh  Type.hh  Types.hh  Unit.hh  Value.hh
include/coel/support/: Assert.hh  List.hh  ListNode.hh  Stack.hh
include/coel/x86/: Backend.hh  Builder.hh  Legaliser.hh  MachineInst.hh  Register.hh
sources/: CMakeLists.txt
sources/codegen/: CopyInserter.cc  Liveness.cc  Liveness.hh  RegisterAllocator.cc
sources/ir/: BasicBlock.cc  Constant.cc  Dumper.cc  Function.cc  Instructions.cc  StackSlot.cc  Types.cc  Unit.cc  Value.cc
sources/support/: Assert.cc
sources/x86/: Backend.cc  Builder.cc  Legaliser.cc  MachineInst.cc
src/: CMakeLists.txt  main.cc
src/codegen/: Context.hh  CopyInserter.cc  Liveness.cc  Liveness.hh  Register.hh  RegisterAllocator.cc  RegisterAllocator.hh
src/graph/: DepthFirstSearch.hh  DominanceComputer.hh  DominatorTree.hh  DotGraph.hh
src/ir/: Argument.hh  BasicBlock.cc  BasicBlock.hh  Constant.cc  Constant.hh  Dumper.cc  Dumper.hh  Function.cc  Function.hh  InstVisitor.hh  Instruction.hh  Instructions.cc  Instructions.hh  Unit.cc  Unit.hh  Value.cc  Value.hh
src/support/: Assert.cc  Assert.hh
src/x86/: Backend.cc  Backend.hh  Builder.cc  Builder.hh  MachineInst.cc  MachineInst.hh
tests/: CMakeLists.txt
tests/x86/: EncoderTest.cc
