cmake_minimum_required(VERSION 3.21)
project(codegen CXX)

option(CODEGEN_BUILD_EXAMPLE "Build example" OFF)
option(CODEGEN_BUILD_TESTS "Build tests" OFF)

find_package(fmt REQUIRED)
if(CODEGEN_BUILD_TESTS)
    find_package(GTest REQUIRED)
    include(GoogleTest)
    enable_testing()
endif()

add_library(codegen)
add_subdirectory(sources)
target_compile_features(codegen PRIVATE cxx_std_20)
target_include_directories(codegen PUBLIC include)
target_link_libraries(codegen PRIVATE fmt::fmt)

if(CODEGEN_BUILD_EXAMPLE)
    add_executable(codegen-example)
    add_subdirectory(example)
    target_compile_features(codegen-example PRIVATE cxx_std_20)
    target_link_libraries(codegen-example PRIVATE codegen)
endif()

if(CODEGEN_BUILD_TESTS)
    add_executable(codegen-tests)
    add_subdirectory(tests)
    target_compile_features(codegen-tests PRIVATE cxx_std_20)
    target_link_libraries(codegen-tests PRIVATE GTest::Main codegen)
    gtest_discover_tests(codegen-tests)
endif()
